force-app/main/default/objects/MembroDistribuicaoVisita__c/MembroDistribuicaoVisita__c.object-meta.xml
<CustomObject>
    <label>Membro da distribuição de visita</label>
    <nameField>
        <displayFormat>MDV-{000000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membros da distribuição de visita</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>