force-app/main/default/objects/MembroDistribuicaoVisita__c/fields/DistribuicaoVisita__c.field-meta.xml
<CustomField>
    <fullName>DistribuicaoVisita__c</fullName>
    <label>Distribuição de Visita</label>
    <referenceTo>DistribuicaoVisita__c</referenceTo>
    <relationshipLabel>Membros</relationshipLabel>
    <relationshipName>Membros_da_distribuicao_de_visita</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>