force-app/main/default/objects/MembroDistribuicaoVisita__c/fields/ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>ServiceResource__c</fullName>
    <label>Pessoa</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>ServiceResource.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Membros da distribuição de visita</relationshipLabel>
    <relationshipName>Membros_da_distribuicao_de_visita</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>