force-app/main/default/objects/MembroDistribuicaoVisita__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indica que o membro não aparecerá no agendamento feito pelo Promotor.</inlineHelpText>
    <label>Supervisor</label>
    <type>Checkbox</type>
</CustomField>