force-app/main/default/objects/MembroDistribuicaoVisita__c/fields/TipoDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>TipoDistribuicao__c</fullName>
    <formula>TEXT( DistribuicaoVisita__r.Tipo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de distribuição</label>
    <type>Text</type>
</CustomField>